# patchtrace

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  PLAN.md  SPEC.md  VERIFY_LOG.md  patchtrace_phase0_design.md  patchtrace_project_starting_brief_rewritten.md
docs/decisions/: ADR-0001-project-foundation.md
evals/fixtures/ai-endpoint-missing-usage-rate-limits/: VERIFICATION_BRIEF.md  agent-summary.md  changed-files.txt  notes.md  patch.diff  test-output.txt
evals/fixtures/auth-session-ownership/: VERIFICATION_BRIEF.md  agent-summary.md  changed-files.txt  notes.md  patch.diff  test-output.txt
evals/fixtures/failed-tests-agent-done/: VERIFICATION_BRIEF.md  agent-summary.md  changed-files.txt  notes.md  patch.diff  test-output.txt
evals/fixtures/payment-webhook-idempotency/: agent-summary.md  (+5 more)
src/cli/: index.ts  io.ts
src/patchtrace/: __init__.py  __main__.py
tests/: ci.test.ts  cli.test.ts  docs-consistency.test.ts  fixtures.test.ts
tests/fixtures/: codex_transcript_noise.json  fake_agent.py  fake_interactive_agent.py  phase4_claim_matrix.json
tests/integration/: test_git_evidence.py  test_interactive_session_capture.py  test_phase4_fixture_matrix.py  test_run_fake_command.py
tests/unit/: test_agent_feedback_report.py  test_claim_analysis.py  test_cli_help.py  test_summary_report.py  test_transcript_normalization.py  test_verification_brief_report.py
workflows/: ci.yml
(+33 files in other folders)
