[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[project]
name = "patchtrace"
version = "0.1.0"
description = "Local-first CLI for recording agent sessions and verification material."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pexpect>=4.9.0,<5.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "typer>=0.20.0,<1.0.0",
]

[project.scripts]
patchtrace = "patchtrace.cli.app:main"

[dependency-groups]
dev = [
  "mypy>=1.19.0",
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
